@@ -2,16 +2,21 @@ package com.example.cricket_backend.mapper;
 
 import com.example.cricket_backend.dto.UserDTO;
 import com.example.cricket_backend.entity.User;
+
 import java.util.HashSet;
+import java.util.stream.Collectors;
 
 public class UserMapper {
     public static UserDTO toDTO(User user) {
         UserDTO dto = new UserDTO();
         dto.setId(user.getId());
         dto.setEmail(user.getEmail());
+        dto.setPassword(user.getPassword());
         dto.setFirstName(user.getFirstName());
-        dto.setLastName(user.getLastName());  // Add this line
-        dto.setRoles(user.getRoles() != null ? user.getRoles().stream().toList() : null);
+        dto.setLastName(user.getLastName());
+        dto.setRoles(user.getRoles() != null
+                ? user.getRoles().stream().collect(Collectors.toList())
+                : null);
         return dto;
     }
 
@@ -19,11 +24,12 @@ public class UserMapper {
         User user = new User();
         user.setId(dto.getId());
         user.setEmail(dto.getEmail());
+        dto.setPassword(user.getPassword());
         user.setFirstName(dto.getFirstName());
-        user.setLastName(dto.getLastName());  // Add this line
-        user.setRoles(dto.getRoles() != null ? new HashSet<>(dto.getRoles()) : new HashSet<>());
-        user.setPassword(dto.getPassword());
+        user.setLastName(dto.getLastName());
+        user.setRoles(dto.getRoles() != null
+                ? new HashSet<>(dto.getRoles())
+                : new HashSet<>());
         return user;
     }
-
 }
